--- a/static/css/common/common.css
+++ b/static/css/common/common.css
@@ -14,7 +14,7 @@ header {
 }
 header .header_main {
 	position: relative;
-	width: 1100px;
+	width: 1130px;
 	height: 100%;
 	margin: 0 auto;
 }
@@ -135,6 +135,7 @@ footer {
 	float: left;
 	width: 100%;
 	margin-top: 20px;
+	font-size: 14px;
 }
 .main .classify a:hover {
 	text-decoration: underline;
